<resources>
    <string name="app_name">Solocoin</string>

    <string name="new_user_intro">Right now, this app currently rewards you to stay at home only. We will expand multiple locations in the future. Until then, try to Stay Home. Stay Safe.</string>

    <string name="intro_image">Application introduction image!</string>
    <string name="intro_one_h1">Location based Rewards</string>
    <string name="intro_two_h1">Redeem for exciting coupons</string>
    <string name="intro_three_h1">challenge your friends</string>
    <string name="intro_one_h2">Get solocoins for grocery shopping, yoga at park, visiting a mall, staying at home</string>
    <string name="intro_two_h2">Redeem solocoins for exciting discount coupons and deals from internet</string>
    <string name="intro_three_h2">Invite and challenge your friends. Share milestones and badges</string>
    <string name="get_started">Get started</string>

    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="create_account">Create account</string>
    <string name="signup">Signup</string>

    <string name="auth_title1">Mobile number</string>
    <string name="auth_title2">Enter your mobile number\nwe will send you the OTP</string>
    <string name="hint_number">9876543210</string>
    <string name="get_otp">Get OTP</string>
    <string name="resend_otp_timer">Resend OTP in 0:%d</string>
    <string name="resend_otp">Resend OTP?</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="okay">Okay</string>

    <string name="cancel">Cancel</string>
    <string name="error_mobile_no">Please enter mobile number, to continue!</string>

    <string name="otp_sent_success">Otp sent successfully</string>
    <string name="otp_sent_failure">Otp sent failed!</string>
    <string name="error_wrong_otp">Invalid OTP, please check again!</string>

    <string name="error_msg">Some error occurred, please try again!</string>
    <string name="hello_blank_fragment">Welcome to Solocoin</string>

    <!--     TODOs: Remove or change this placeholder text -->
    <string name="home">Home</string>

    <string name="wallet">Wallet</string>
    <string name="milestones">Milestones</string>
    <string name="profile">Profile</string>
    <string name="invite">Invite and Earn</string>
    <string name="my_profile">My Profile</string>
    <string name="pp">Privacy policy</string>
    <string name="tnc">Terms &amp; Conditions</string>
    <string name="logout">Logout</string>
    <string name="confirm">Confirm</string>

    <string name="tag_logout">Do you really want to logout?</string>
    <string name="unable_logout">Please connect to the Internet to logout. No changes will happen to your data.</string>


    <string name="url_pp">https://www.solocoin.app/privacy-policy/</string>

    <string name="url_tnc">https://www.solocoin.app/terms-and-conditions/</string>
    <string name="invite_subject">My application name</string>

    <string name="invite_message">\nI have started social-distancing with SoloCoin. I\'m changing the world. You can join me as well. Use this link and change the world.\n </string>
    <string name="invite_title">Select an option</string>
    <string name="app_link">https://play.google.com/store/apps/details?id=app.solocoin.solocoin</string>
    <string name="badge_invite_subject">Look at my new achievement!</string>

    <string name="badge_invite_message_start">I just got </string>
    <string name="badge_invite_message_end"> on Solocoin! Stay home, stay safe. Get the app here: solocoin.app #Solocoin</string>
    <string name="title_myl">Mark your location</string>

    <string name="clear_current_session">Do you want to clear current session?</string>
    <string name="tag_myl">Please hold on 5–10 seconds for accurate location or mark location then confirm</string>

    <string name="hint_current_loc">Location</string>
    <string name="current_address">%s, %s, %s</string>
    <string name="confirm_loc">Confirm location</string>
    <string name="hint_fetching_loc">Fetching location</string>
    <string name="permission">Permission</string>

    <string name="tag_permission">Location permission is needed to application for working efficiently</string>
    <string name="refreshing_location">Refreshing location, please wait…</string>
    <string name="title_create_profile">Create profile</string>

    <string name="name">Name</string>
    <string name="tag_tnc">By creating an account you agree to our Terms of Service and Privacy Policy</string>
    <string name="start_time">0h 0m 0s</string>

    <string name="notif_checkin">Solocoin Notification Check-in</string>

    <string name="notif_checkin_desc">Please click on the notification or open application for us to ensure you are still here.</string>
    <string name="claim_offer">CLAIM OFFER</string>

    //rewards + wallet section
    <string name="claim_error">Sorry, an error occurred. Please contact customer support.</string>
    <string name="reward_details">Reward Details</string>
    <string name="coins_value">0.0</string>
    <string name="reward_cost_coins">2500 Coins</string>
    <string name="reward_cost_rupees">500</string>
    <string name="reward_company_logo">Company Logo</string>
    <string name="reward_company_name">Company Name</string>
    <string name="coins_image">Coins Symbol</string>
    <string name="reward_description">6 Months Youtube Premium Membership Trail For New Users</string>
    <string name="extra_reward_detail">* Extra Terms and Conditions</string>
    <string name="reward_image">Reward Image</string>
    <string name="terms_and_conditions">Terms and Conditions :</string>
    <string name="Rs">\u20B9</string>
    <string name="coins_in_wallet">Coins in Wallet</string>
    <string name="claim_success">"Coupon code revealed. Press copy button to use."</string>
    <string name="already_claimed">"Coupon already Redeemed."</string>
    <string name="load_issue">Some error occurred.\n Please refresh.</string>
    <string name="internet_issue">No internet connectivity.</string>
    <string name="zero_rewards">"No offers available."</string>
    <string name="share_n_earn"><![CDATA[Share & Earn]]></string>

    //Quiz
    <string name="of_social_distancing">on Rewards Hotspot</string>
    <string name="option_a">A. Option 1</string>
    <string name="option_b">B. Option 2</string>
    <string name="option_c">C. Option 3</string>
    <string name="option_d">D. Option 4</string>
    <string name="question_n">1. Question</string>
    <string name="default_timer_text">0d 0h 0m</string>
    <string name="challenges_text">Challenges</string>
    <string name="participate_text">Participate in the #StayAtHome challenge and win exciting badges and rewards.</string>
    <string name="noconnectivity_error_msg">No network available, please check your WiFi or Data connection</string>
    <string name="after_two_hours_msg">The quiz will be available after %1$d hour %2$d minutes</string>
    <string name="available_sunday_msg">The quiz will be available on next Sunday</string>
    <string name="device_time_incorrect_msg">Your phone date or time is inaccurate! \nAdjust your clock and try again</string>
    <string name="quiz_unavailable_msg">The quiz is currently unavailable, please try again after sometime</string>
    <string name="share_earn_text1">Invite your friends and Earn SoloCoins</string>
    <string name="share_earn_text2">Each Invite will earn you 50 coins</string>
    <string name="General">General</string>
    <string name="level_tv">Level 2</string>
    //Milestones
    <string name="level_info_tv_2">coins to move to next level!</string>
    <string name="award_cnt">2</string>
    <string name="awards_unlocked">Awards Unlocked</string>
    <string name="coming_soon">Coming Soon..</string>
    <string name="awards_achieved">Badges Earned</string>
    <string name="level_info_tv_1">coins away.</string>
    <string name="trophy_icon">trophy_icon</string>
    <string name="badge_icon">Badge Icon</string>
    <string name="badge_name">Common Man</string>
    <string name="badge_level">Level 1</string>
    <string name="level_first">Level 1</string>
    <string name="share">Share</string>
    <string name="country">IND</string>
    <string name="username">You</string>
    <string name="user_rank">#12</string>
    <string name="your_code">Your Code</string>
    <string name="text_copy">Copy</string>
    <string name="coupon_code">QAZWSXEDC</string>
    <string name="code">Code:</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="milestones_info">Compete globally with players, achieve milestones, collect badges and brag about it on social media.</string>
    <string name="one_liner">Every Alpha Warrior was a trainee once</string>
    <string name="image_error">Unable to load your badge.</string>
    <string name="wallet_update_info">Wallet will take 2–3 minutes to update.</string>
    <string name="refresh_reward">Loading your offers...</string>
    <string name="logout_issue">Please connect to internet to logout.</string>
    <string name="app_guide">App Guide</string>
    <string name="url_guide">https://www.solocoin.app/app-guide/</string>
    <string-array name="languages">
        <item>English</item>
        <item>Spanish</item>
        <item>Mandarin</item>
        <item>Portuguese</item>
        <item>Hindi</item>
    </string-array>

</resources>
