<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="@dimen/app_padding"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_horizontal"
        android:paddingStart="18dp"
        android:paddingEnd="18dp">

        <TextView
            android:id="@+id/level_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_toStartOf="@id/trophy"
            android:gravity="center_horizontal"
            android:text="@string/level_tv"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/level_info_tv_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/level_tv"
            android:layout_alignStart="@id/level_tv"
            android:layout_alignEnd="@id/level_tv"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/level_info_tv_2"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/trophy"
            android:layout_width="64dp"
            android:layout_alignTop="@id/award_cnt"
            android:layout_height="48dp"
            android:layout_alignBottom="@id/award_cnt"
            android:layout_toStartOf="@id/award_cnt"
            android:layout_marginStart="12dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/trophy_icon"
            android:paddingStart="12dp"
            android:paddingTop="6dp"
            android:paddingEnd="6dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_trophy_pink" />

        <TextView
            android:id="@+id/award_cnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="6dp"
            android:paddingEnd="12dp"
            android:layout_alignParentEnd="true"
            android:text="@string/award_cnt"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/award_cnt"
            android:layout_alignStart="@id/trophy"
            android:layout_alignEnd="@id/award_cnt"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/awards_unlocked"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="@dimen/mobile_match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:background="@color/colorAccent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/level_info_tv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="6dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/level_info_tv_1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <ProgressBar
            android:id="@+id/level_pb"
            style="@style/ProgressBarTheme"
            android:indeterminate="false"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:progress="99" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/level_front"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="@string/level_first"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/level_mid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/level_first"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/level_rear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="@string/level_first"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/leaderboard"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/mobile_match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:backgroundTint="#2E3E77"
        android:layout_marginBottom="24dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:divider="@android:color/transparent"
        android:dividerHeight="0.0px"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <ImageView
            android:id="@+id/rank_card"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/rank_card_blur" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textColor="@color/white"
            android:text="@string/coming_soon"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/awards_achieved"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp" />

    <GridLayout
        android:id="@+id/badges_gl"
        android:layout_width="@dimen/wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:useDefaultMargins="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:columnCount="2"
        android:rowCount="1" />

</LinearLayout>